# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "Well-known pathnames."
#documentation = "https://docs.rs/known-paths/"
readme = true
homepage = "https://github.com/known-facts/known-paths"
repository = "https://github.com/known-facts/known-paths"
license = "Unlicense"
keywords = ["known", "filesystem", "path", "xdg"]
categories = ["filesystem", "os"]
publish = true

[workspace.dependencies]
known-paths = { path = "lib/known-paths" }

[patch.crates-io]
known-paths = { path = "lib/known-paths" }
